undo working and update db